--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@latest/dist/svg.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
   </head>
   <body>
     <main>
